Update tfidf similarity

--- a/topics/Quran.ipynb
+++ b/topics/Quran.ipynb
@@ -12,9 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -30,6 +32,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -41,9 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -51,28 +87,32 @@
     "\n",
     "documents = [] # chapters->verses\n",
     "for chapter in range(1, 115):\n",
-    "    files = glob.glob(data_folder + str(chapter).zfill(3) + '*')\n",
+    "    files = sorted(glob.glob(data_folder + str(chapter).zfill(3) + '*'))\n",
     "    verses = [open(f, 'r').read() for f in files]\n",
     "    documents.append(verses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "# Remove non ascii and change to lower case\n",
+    "# Remove non ascii and change to lower case; not necessary with RegexpTokenizer(r'\\w+')\n",
     "docs = [jj.decode('utf8').encode('ascii', errors='ignore').lower() for ii in documents for jj in ii]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -96,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,51 +148,133 @@
     "dictionary = corpora.Dictionary(processed)\n",
     "#dictionary.save('/tmp/dict.dict')\n",
     "corpus = [dictionary.doc2bow(text) for text in processed]\n",
-    "#corpora.MmCorpus.serialize('/tmp/temp.mm', corpus)\n"
+    "#corpora.MmCorpus.serialize('/tmp/temp.mm', corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "lda = models.LdaModel(corpus, id2word=dictionary, num_topics=101, passes=10)\n",
+    "# LDA modeling\n",
+    "lda = models.LdaModel(corpus, id2word=dictionary, num_topics=11, passes=10)\n",
     "corpus_lda = lda[corpus] # create a double wrapper over the original corpus: bow->tfidf->fold-in-lsi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "a = lda.print_topics(num_topics=-1, num_words=5)\n",
-    "i=0"
+    "a = lda.print_topics(num_topics=-1, num_words=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['in the name of god, the gracious, the merciful.',\n",
+       " 'praise be to god, lord of the worlds.',\n",
+       " 'the most gracious, the most merciful.',\n",
+       " 'the path of those you have blessed, not of those against whom there is anger, nor of those who are misguided.',\n",
+       " 'guide us to the straight path.',\n",
+       " 'master of the day of judgment.',\n",
+       " 'it is you we worship, and upon you we call for help.',\n",
+       " 'it is decreed for you: when death approaches one of you, and he leaves wealth, to make a testament in favor of the parents and the relatives, fairly and correctlya duty upon the righteous. ',\n",
+       " 'the sacred month for the sacred month; and sacrilege calls for retaliation. whoever commits aggression against you, retaliate against him in the same measure as he has committed against you. and be conscious of god, and know that god is with the righteous.',\n",
+       " 'thus we made you a moderate community, that you may be witnesses to humanity, and that the messenger may be a witness to you. we only established the direction of prayer, which you once followed, that we may distinguish those who follow the messenger from those who turn on their heels. it is indeed difficult, except for those whom god has guided. but god would never let your faith go to waste. god is kind towards the people, merciful.']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "guide us to the straight path.\n",
-      "[(34, 0.60198019801980185), (63, 0.20198019801980194)]\n",
-      "(34, u'0.241*\"guid\" + 0.170*\"turn\" + 0.165*\"away\" + 0.061*\"path\" + 0.046*\"inspir\"')\n"
+      "[['nam', u'gracy', u'mercy'], ['pra', 'world'], [u'gracy', u'mercy'], ['path', 'bless', 'ang', 'misguid'], ['guid', 'us', 'straight', 'path'], ['mast', 'day', 'judg'], ['wor', 'upon', 'cal', 'help'], ['decree', 'dea', 'approach', 'on', 'leav', 'weal', 'mak', 'testa', 'fav', 'par', 'rel', 'fair', 'correctly', 'duty', 'upon', 'right'], ['sacr', 'mon', 'sacr', 'mon', 'sacrileg', 'cal', u'reta', 'whoev', 'commit', u'aggress', u'reta', 'meas', 'commit', u'conscy', 'know', 'right'], ['thu', 'mad', 'mod', 'commun', 'may', 'wit', 'hum', 'messeng', 'may', 'wit', 'est', 'direct', 'pray', 'follow', 'may', u'distinct', 'follow', 'messeng', 'turn', 'heel', 'indee', 'difficult', u'exceiv', 'guid', 'would', 'nev', 'let', 'fai', 'go', 'wast', 'kind', 'toward', 'peopl', u'mercy']]\n"
      ]
     }
    ],
    "source": [
+    "print processed[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6348 6348\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(corpus), len(corpus_lda)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in the name of god, the gracious, the merciful.\n",
+      "[(8, 0.7727271975694745), (10, 0.022727347884186636), (5, 0.022727272727404053)]\n",
+      "(8, u'0.113*\"mercy\" + 0.090*\"nam\" + 0.082*\"gracy\" + 0.036*\"cre\" + 0.017*\"say\" + 0.015*\"hum\" + 0.014*\"test\"')\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
     "print docs[i]\n",
     "sorted_rel = sorted(corpus_lda[i], key=lambda x: x[1], reverse=True)\n",
     "print sorted_rel[:3]\n",
@@ -162,59 +284,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(0,\n",
-       "  u'0.069*\"pray\" + 0.026*\"giv\" + 0.022*\"mad\" + 0.021*\"mat\" + 0.020*\"revel\" + 0.019*\"paty\" + 0.017*\"night\"'),\n",
+       "  u'0.061*\"pun\" + 0.022*\"upon\" + 0.020*\"day\" + 0.019*\"wom\" + 0.015*\"cal\" + 0.014*\"around\" + 0.013*\"pain\"'),\n",
        " (1,\n",
-       "  u'0.032*\"rememb\" + 0.030*\"rev\" + 0.030*\"indee\" + 0.029*\"hum\" + 0.027*\"go\" + 0.024*\"mak\" + 0.023*\"com\"'),\n",
+       "  u'0.069*\"said\" + 0.035*\"peopl\" + 0.023*\"among\" + 0.022*\"wor\" + 0.022*\"messeng\" + 0.021*\"us\" + 0.016*\"say\"'),\n",
        " (2,\n",
-       "  u'0.069*\"deny\" + 0.035*\"wil\" + 0.030*\"light\" + 0.030*\"whomev\" + 0.029*\"pra\" + 0.028*\"day\" + 0.027*\"sign\"'),\n",
+       "  u'0.070*\"know\" + 0.039*\"heart\" + 0.024*\"on\" + 0.022*\"anoth\" + 0.021*\"rev\" + 0.018*\"day\" + 0.015*\"cont\"'),\n",
        " (3,\n",
-       "  u'0.161*\"said\" + 0.041*\"mos\" + 0.025*\"son\" + 0.020*\"fath\" + 0.019*\"two\" + 0.019*\"on\" + 0.016*\"peopl\"'),\n",
+       "  u'0.024*\"serv\" + 0.022*\"us\" + 0.019*\"believ\" + 0.018*\"return\" + 0.017*\"day\" + 0.016*\"say\" + 0.016*\"pur\"'),\n",
        " (4,\n",
-       "  u'0.038*\"exceiv\" + 0.036*\"way\" + 0.035*\"scripture\" + 0.032*\"non\" + 0.028*\"toward\" + 0.024*\"giv\" + 0.021*\"bless\"'),\n",
+       "  u'0.032*\"guid\" + 0.027*\"say\" + 0.026*\"turn\" + 0.024*\"away\" + 0.019*\"see\" + 0.017*\"would\" + 0.015*\"warn\"'),\n",
        " (5,\n",
-       "  u'0.067*\"guid\" + 0.053*\"sent\" + 0.043*\"tru\" + 0.037*\"peopl\" + 0.035*\"warn\" + 0.033*\"say\" + 0.020*\"consid\"'),\n",
+       "  u'0.052*\"fir\" + 0.021*\"ent\" + 0.021*\"hel\" + 0.017*\"whoev\" + 0.015*\"therein\" + 0.012*\"crush\" + 0.011*\"hom\"'),\n",
        " (6,\n",
-       "  u'0.103*\"disbeliev\" + 0.064*\"see\" + 0.036*\"fir\" + 0.031*\"hel\" + 0.018*\"peopl\" + 0.017*\"put\" + 0.015*\"burn\"'),\n",
+       "  u'0.075*\"ear\" + 0.041*\"heav\" + 0.038*\"say\" + 0.035*\"day\" + 0.028*\"everyth\" + 0.025*\"prom\" + 0.019*\"belong\"'),\n",
        " (7,\n",
-       "  u'0.050*\"gard\" + 0.036*\"among\" + 0.029*\"whoev\" + 0.027*\"riv\" + 0.026*\"forev\" + 0.026*\"flow\" + 0.025*\"pleas\"'),\n",
+       "  u'0.030*\"deny\" + 0.028*\"peopl\" + 0.024*\"night\" + 0.022*\"said\" + 0.019*\"us\" + 0.017*\"childr\" + 0.014*\"leav\"'),\n",
        " (8,\n",
-       "  u'0.052*\"forg\" + 0.043*\"heart\" + 0.027*\"path\" + 0.027*\"rep\" + 0.024*\"peopl\" + 0.023*\"work\" + 0.023*\"acceiv\"'),\n",
+       "  u'0.113*\"mercy\" + 0.090*\"nam\" + 0.082*\"gracy\" + 0.036*\"cre\" + 0.017*\"say\" + 0.015*\"hum\" + 0.014*\"test\"'),\n",
        " (9,\n",
-       "  u'0.032*\"produc\" + 0.031*\"sur\" + 0.028*\"adv\" + 0.022*\"wick\" + 0.021*\"mess\" + 0.021*\"plac\" + 0.019*\"upon\"'),\n",
+       "  u'0.023*\"cre\" + 0.021*\"wit\" + 0.021*\"sky\" + 0.020*\"remind\" + 0.016*\"sign\" + 0.013*\"bring\" + 0.013*\"set\"'),\n",
        " (10,\n",
-       "  u'0.183*\"mercy\" + 0.143*\"nam\" + 0.130*\"gracy\" + 0.036*\"night\" + 0.027*\"wor\" + 0.022*\"set\" + 0.015*\"marvel\"'),\n",
-       " (11,\n",
-       "  u'0.061*\"us\" + 0.043*\"say\" + 0.029*\"pun\" + 0.028*\"believ\" + 0.025*\"messeng\" + 0.025*\"lov\" + 0.021*\"weal\"'),\n",
-       " (12,\n",
-       "  u'0.056*\"upon\" + 0.053*\"us\" + 0.044*\"cal\" + 0.027*\"com\" + 0.024*\"near\" + 0.022*\"bring\" + 0.022*\"let\"'),\n",
-       " (13,\n",
-       "  u'0.059*\"fear\" + 0.051*\"right\" + 0.033*\"evil\" + 0.033*\"reward\" + 0.030*\"good\" + 0.029*\"believ\" + 0.028*\"remind\"'),\n",
-       " (14,\n",
-       "  u'0.036*\"say\" + 0.030*\"follow\" + 0.028*\"would\" + 0.026*\"possess\" + 0.025*\"soul\" + 0.023*\"judg\" + 0.023*\"don\"'),\n",
-       " (15,\n",
-       "  u'0.092*\"turn\" + 0.076*\"away\" + 0.068*\"day\" + 0.025*\"whatev\" + 0.024*\"fac\" + 0.020*\"wrong\" + 0.018*\"desir\"'),\n",
-       " (16,\n",
-       "  u'0.048*\"hear\" + 0.043*\"think\" + 0.042*\"lik\" + 0.035*\"said\" + 0.026*\"drink\" + 0.023*\"peopl\" + 0.018*\"giv\"'),\n",
-       " (17,\n",
-       "  u'0.043*\"wit\" + 0.030*\"reject\" + 0.023*\"help\" + 0.023*\"woe\" + 0.019*\"support\" + 0.019*\"every\" + 0.018*\"crush\"'),\n",
-       " (18,\n",
-       "  u'0.037*\"serv\" + 0.034*\"day\" + 0.030*\"believ\" + 0.026*\"pun\" + 0.026*\"prom\" + 0.024*\"wom\" + 0.023*\"bet\"'),\n",
-       " (19,\n",
-       "  u'0.079*\"know\" + 0.040*\"lif\" + 0.021*\"cont\" + 0.019*\"world\" + 0.018*\"heart\" + 0.017*\"giv\" + 0.017*\"day\"'),\n",
-       " (20,\n",
-       "  u'0.094*\"ear\" + 0.086*\"cre\" + 0.052*\"heav\" + 0.044*\"on\" + 0.033*\"everyth\" + 0.025*\"belong\" + 0.023*\"man\"')]"
+       "  u'0.051*\"believ\" + 0.035*\"right\" + 0.032*\"giv\" + 0.031*\"good\" + 0.024*\"forg\" + 0.022*\"reward\" + 0.021*\"exceiv\"')]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,15 +326,6 @@
    "source": [
     "a"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
