--- a/topics/tmp.ipynb
+++ b/topics/tmp.ipynb
@@ -266,340 +266,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['System and human system engineering testing of EPS\\n',\n",
-       " 'Human machine interface for lab abc computer applications\\n',\n",
-       " 'A survey of user opinion of computer system response time\\n',\n",
-       " 'The EPS user interface management system\\n']"
-      ]
-     },
-     "execution_count": 298,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "c"
+    "# Rank by similarity of tfidf"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3, 3), (1, 2), (2, 2), (0, 1)]"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'System and human system engineering testing of EPS\\n'"
-      ]
-     },
-     "execution_count": 272,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.documents[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import operator\n",
-    "\n",
-    "\n",
-    "for word in parsed:\n",
-    "\n",
-    "    word_dict_value = word_index[word].items()\n",
-    "\n",
-    "    # Get doc for word\n",
-    "    ind = word_dict_value\n",
-    "    \n",
-    "    # Get doc and positions of word in doc\n",
-    "    # Below turns out faster than: ind = sorted(tmp.items(), key=lambda x: len(operator.itemgetter(1)(x)), reverse=True)\n",
-    "    # ind = sorted(word_dict_value, key=lambda x: len(x[1]), reverse=True)\n",
-    "\n",
-    "    for i in ind:\n",
-    "        doc_freq[i[0]] += 1\n",
-    "    # [documents[i[0]] for i in ind]\n",
-    "    \n",
-    "ind_sorted = sorted(doc_freq.items(), key=operator.itemgetter(1), reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3, 2), (0, 1), (1, 1), (2, 1)]"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind_sorted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3, [0, 2]), (1, [4]), (2, [4])]"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {1: [4], 2: [4], 3: [0, 2]})"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "word_index[parsed[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {1: [4], 2: [4], 3: [0, 2]})"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ind = sorted(word_index[parsed[0]].items(), key=lambda x: len(operator.itemgetter(1)(x)), reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3, [0, 2]), (1, [4]), (2, [4])]"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, [4]), (2, [4]), (3, [0, 2])]"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted(tmp.items())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {1: [4], 2: [4], 3: [0, 2]})"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "ind = sorted(tmp.items(), key=lambda x: len(tmp[1]), reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, [4]), (2, [4]), (3, [0, 2])]"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(3, [0, 2]), (1, [4]), (2, [4])]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind"
+    "1. Get idf of each term in corpus, and tf for each document\n",
+    "1. For a new query, get all terms in it\n",
+    "1. If there is no duplicate terms, the tfidf vector of the query is proportional to the idf for all terms in it\n",
+    "1. Compute the TFIDF vector for each doc only using terms in the query\n",
+    "1. Compute similarity"
    ]
   },
   {
