Add suras in chronological order

--- a/topics/Quran.ipynb
+++ b/topics/Quran.ipynb
@@ -12,11 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -399,6 +397,55 @@
     "plt.axis(\"off\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quran in chronological order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sura_medina = [2, 3, 4, 5, 8, 9, 22, 24, 33, 47, 48, 49, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 98, 110]\n",
+    "sura_mecca_first = [96, 74, 111, 106, 108, 104, 107, 102, 105, 92,\n",
+    "90, 94, 93, 97, 86, 91, 80, 68, 87, 95,\n",
+    "103, 85, 73, 101, 99, 82, 81, 53, 84, 100,\n",
+    "79, 77, 78, 88, 89, 75, 83, 69, 51, 52,\n",
+    "56, 70, 55, 112, 109, 113, 114, 1]\n",
+    "sura_mecca_second = [54, 37, 71, 76, 44, 50, 20, 26, 15, 19,\n",
+    "38, 36, 43, 72, 67, 23, 21, 25, 17, 27, 18]\n",
+    "sura_mecca_third = [32, 41, 45, 16, 30, 11, 14, 12, 40, 28,\n",
+    "39, 29, 31, 42, 10, 34, 35, 7, 46, 6, 13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "114"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([i for i in sura_medina + sura_mecca_first + sura_mecca_second + sura_mecca_third])"
+   ]
   }
  ],
  "metadata": {
@@ -417,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.9"
   },
   "toc": {
    "base_numbering": 1,
@@ -435,7 +482,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
