--- a/transformers/ChatLaw.ipynb
+++ b/transformers/ChatLaw.ipynb
@@ -4,19 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yuwei/.cache\\huggingface\\hub\n"
+      "D:/Code/.cache/huggingface\\hub\n"
      ]
     }
    ],
@@ -67,7 +60,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -98,5 +91,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
