Finished fast tokenizer in QA

--- a/transformers/Tutorial_99_projects.ipynb
+++ b/transformers/Tutorial_99_projects.ipynb
@@ -728,7 +728,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Llama 2"
+    "# Llama 2\n",
+    "Refer to https://huggingface.co/docs/transformers/tasks/language_modeling"
    ]
   },
   {
@@ -757,14 +758,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "274c55aea48440adae6458389db52364",
+       "model_id": "5bb8fd8d2f2146bdad12f6e86c629015",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,28 +782,138 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A matching Triton is not available, some optimizations will not be enabled.\n",
+      "Error caught was: No module named 'triton'\n"
+     ]
     }
    ],
    "source": [
-    "# Not enough memory...\n",
+    "# Not enough memory on my Legion Y9000P. Need to set pagefile to system managed\n",
+    "from transformers import pipeline\n",
+    "checkpoint = 'meta-llama/Llama-2-7b-chat-hf'\n",
+    "generator = pipeline(\"text-generation\", model=checkpoint, device_map='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1min 50s\n",
+      "Wall time: 4min 24s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[{'generated_text': 'How much memory is needed to run Llama2 \\n\\nLlama2 is a neural network architecture that can be used for a variety of tasks, including image classification, object detection, and segmentation. The amount of memory needed to run Llama2 will depend on the specific task and'}]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = ['How much memory is needed to run Llama2 ']\n",
+    "%time generator(prompt, max_new_tokens=50, num_beams=2, do_sample=True, top_k=5, top_p=0.95)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## With config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3473ca7b55cc4b97a1fc050c0a5a5dd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0639ae133e2459a810f951b77b033a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)neration_config.json:   0%|          | 0.00/167 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-2-7b-chat-hf\")"
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(checkpoint)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "raw_inputs = ['Hello. Who are you?']\n",
-    "inputs = tokenizer(raw_inputs, padding=True, truncation=True, return_tensors=\"pt\")\n",
-    "print(inputs)\n",
-    "\n",
-    "outputs = model(**inputs)\n",
-    "print(output)"
+    "inputs = tokenizer(raw_inputs, \n",
+    "                   # padding='longest', truncation=True, max_length=128, \n",
+    "                   return_tensors=\"pt\").input_ids\n",
+    "outputs = model.generate(inputs, max_new_tokens=20, num_beams=2, do_sample=True, top_k=5, top_p=0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hello. Who are you?\\n\\nComment: Hello! I'm just an AI designed to assist and communicate with users\"]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.batch_decode(outputs, skip_special_tokens=True)"
    ]
   }
  ],
