--- a/transformers/Tutorial_3_tokenizers.ipynb
+++ b/transformers/Tutorial_3_tokenizers.ipynb
@@ -1337,23 +1337,76 @@
    "id": "b9b51da0-9767-41e8-9e58-8907e33e861c",
    "metadata": {},
    "source": [
-    "# Next"
+    "# Normalization and pre-tokenization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53597e7a-f196-4f91-9f2d-50d66a1e60bb",
+   "metadata": {},
+   "source": [
+    "## Normalization: remove whitespace, lowercasing, remove accents, and Unicode normalization\n",
+    "Some unicode letters correspond to different bytes. The unification is Unicode normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db3221cf-234b-4d7a-8bb4-987046aa509e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tokenizers.Tokenizer'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
+    "print(type(tokenizer.backend_tokenizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5feeb933-2f5e-4280-b26b-9760f60ce0b4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello how are u?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenizer.backend_tokenizer.normalizer.normalize_str('Héllò hôw are ü?'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb549b57-105d-40d4-a81d-ac889848551f",
+   "id": "97ca8dae-6b1c-42ec-8005-08cbf2c07449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Next: https://huggingface.co/learn/nlp-course/chapter6/4?fw=pt"
+    "# Continue the first video for cases of normalization\n",
+    "# https://huggingface.co/learn/nlp-course/chapter6/4?fw=pt"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1367,7 +1420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
