--- a/transformers/Tutorial_1_modeling.ipynb
+++ b/transformers/Tutorial_1_modeling.ipynb
@@ -1246,7 +1246,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dynamic padding and collator"
+    "### Dynamic padding and collator\n",
+    "Data collators are objects that will form a batch by using a list of dataset elements as input. These elements are of the same type as the elements of train_dataset or eval_dataset. Used in `DataLoader`"
    ]
   },
   {
@@ -1600,7 +1601,7 @@
     "def tokenize_function(sample):\n",
     "    return tokenizer(sample['sentence'], truncation=True)\n",
     "\n",
-    "tokenized_datasets = raw_datasets.map(tokenize_function)"
+    "tokenized_datasets = raw_datasets.map(tokenize_function)  # , batched=True)"
    ]
   },
   {
@@ -1741,7 +1742,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The follows run a long while on my X1 so are executed on colab\n",
+    "The follows run a long while on my X1, okay on Legion\n",
+    "\n",
+    "Another run on colab\n",
     "https://colab.research.google.com/drive/1_orJU8HBXfE24HhtOPVyVZR6spNQJ515?usp=sharing"
    ]
   },
@@ -2059,7 +2062,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Batch using DataLoader"
+    "### Batch using DataLoader  mance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataLoader is main vehicle to help us to sample data from our data source. These are the key points\n",
+    "- Manage multi-process fetching  \n",
+    "- Sample data from dataset as small batches  \n",
+    "- transform data with collate_fn()\n",
+    "- pin memory (for GPU memory performance)"
    ]
   },
   {
@@ -2190,6 +2204,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# model.train() tells your model that you are training the model. \n",
+    "# This helps inform layers such as Dropout and BatchNorm, which are designed to behave differently during training and evaluation. \n",
+    "# model.train() sets the mode to train. You can call either model.eval() or model.train(mode=False) to tell that you are testing.\n",
+    "# https://stackoverflow.com/a/51433411\n",
     "model.train()\n",
     "for epoch in range(num_epochs):\n",
     "    for batch in train_dataloader:\n",
