--- a/transformers/Tutorial_99_projects.ipynb
+++ b/transformers/Tutorial_99_projects.ipynb
@@ -407,8 +407,9 @@
    "metadata": {},
    "source": [
     "#### CLS pooling\n",
-    "Collect the last hidden state for the special [CLS] token  \n",
-    "CLS token: Append a special <CLS> token to the start of every sequence. This special token is meant to capture the sequence-level information. During the training process, some sentence-level classification task based on this CLS embedding will tune the CLS token representation via backpropagation.  \n",
+    "Pooling: The process of converting a sequence of embeddings into a sentence embedding is called “pooling”.  \n",
+    "CLS pooling is to collect the last hidden state for the special [CLS] token  \n",
+    "CLS token: Append a special <CLS> token to the start of every sequence. This special token is meant to capture the sequence-level information. During the training process, some sentence-level classification (like next sewntence prediction) task based on this CLS embedding will tune the CLS token representation via backpropagation.  \n",
     "  \n",
     "From [article of pooling methods](https://blog.ml6.eu/the-art-of-pooling-embeddings-c56575114cf8)\n"
    ]
