--- a/transformers/Tutorial_3_tokenizers.ipynb
+++ b/transformers/Tutorial_3_tokenizers.ipynb
@@ -1406,7 +1406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1420,7 +1420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
